tests/models/enum/named/u16/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = 1)]
        value: u16
    },
}
fn main() {}
